--- a/react1_example.html
+++ b/react1_example.html
@@ -10,6 +10,20 @@
     <title>React 1</title>
 </head>
 <body>
+    <div id="root"></div>
     
+
+    <script type="text/babel">
+        class App extends React.Component{
+            render(){
+                return(
+                    <div>
+                        <h1>Hello React</h1>
+                    </div>
+                );
+            }
+        }
+        ReactDOM.render(<App/>, document.getElementById("root")); 
+    </script>
 </body>
 </html>
